@@ -164,6 +164,8 @@ class SupervisedScheduler final : public Scheduler {
   uint64_t const _fifo2Size;
 
   Gauge<uint64_t>& _metricsQueueLength;
+  Gauge<uint64_t>& _metricsAwakeThreads;
+  Gauge<uint64_t>& _metricsNumWorkerThreads;
   Counter& _metricsQueueFull;
 
   std::unique_ptr<WorkItem> getWork(std::shared_ptr<WorkerState>& state);
